# Consulta_CEP

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/main/: index.html
api/schemas/: index.html
bootstrap/: mongodb.py
consulta_cep/: main.py  schemas.py
docs/: index.md
docs/api/: main.md  schemas.md
